--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -34,7 +34,7 @@
     not root_path ? 'path-frontpage' : 'path-' ~ root_path|clean_class,
     node_type ? 'node--type-' ~ node_type|clean_class,
     db_offline ? 'db-offline',
-    "hold-transition skin-blue sidebar-mini"
+    "hold-transition skin-black sidebar-mini"
   ]
 %}
 <!DOCTYPE html>
