--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -82,6 +82,40 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </a>
+    <!-- User Account: style can be found in dropdown.less -->
+    <div class="navbar-custom-menu">
+      <ul class="nav navbar-nav">
+        {% if user.uid %}
+          <li class="dropdown user user-menu">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <img src="{{ user.picture }}" class="user-image" alt="User Image">
+              <span class="hidden-xs">{{ user.name }}</span>
+            </a>
+            <ul class="dropdown-menu">
+              <!-- User image -->
+              <li class="user-header">
+                <img src="{{ user.picture }}" class="img-circle" alt="User Image">
+                <p>
+                  {{ user.name }}
+                  <small>Member since {{ user.created|date("M. Y") }}</small>
+                </p>
+              </li>
+              <!-- Menu Footer-->
+              <li class="user-footer">
+                <div class="pull-left">
+                  <a href="{{ base_path }}/user/{{ user.uid }}/edit" class="btn btn-default btn-flat">Profile</a>
+                </div>
+                <div class="pull-right">
+                  <a href="{{ base_path }}/user/logout" class="btn btn-default btn-flat">Sign out</a>
+                </div>
+              </li>
+            </ul>
+          </li>
+        {% else %}
+          <li><a href="{{ base_path }}/user/login">Log in</a></li>
+        {% endif %}
+      </ul>
+    </div>
   </nav>
 </header>
 
