updated available regions

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -125,8 +125,7 @@
 <aside class="main-sidebar">
 <!-- sidebar: style can be found in sidebar.less -->
 <section class="sidebar">
-  {% if page.sidebar_first %}{{ page.sidebar_first }}{% endif %}
-  {% if page.sidebar_second %}{{ page.sidebar_second }}{% endif %}
+  {% if page.sidebar %}{{ page.sidebar }}{% endif %}
 </section>
 <!-- /.sidebar -->
 </aside>
