added support for customizing menu icons

--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -34,7 +34,7 @@
         <li>
       {% endif %}
           <a href="{{ item.url }}">
-            <i class="fa fa-circle-o"></i>
+            <i class="fa {% if item.icon %}{{ item.icon }}{% else %}fa-circle-o{% endif %}"></i>
             <span>{{ item.title }}</span>
             {% if item.below %}
               <i class="fa fa-angle-left pull-right"></i>
