--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -34,7 +34,9 @@
     not root_path ? 'path-frontpage' : 'path-' ~ root_path|clean_class,
     node_type ? 'node--type-' ~ node_type|clean_class,
     db_offline ? 'db-offline',
-    "hold-transition skin-black sidebar-mini"
+    "sidebar-mini",
+    "hold-transition",
+    skin ? "skin-" ~ skin : 'skin-blue' |clean_class
   ]
 %}
 <!DOCTYPE html>
