--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -42,10 +42,10 @@
 <!DOCTYPE html>
 <html{{ html_attributes }}>
   <head>
-    {{ head }}
+    <head-placeholder token="{{ placeholder_token|raw }}">
     <title>{{ head_title|safe_join(' | ') }}</title>
-    {{ styles }}
-    {{ scripts }}
+    <css-placeholder token="{{ placeholder_token|raw }}">
+    <js-placeholder token="{{ placeholder_token|raw }}">
   </head>
   <body{{ attributes.addClass(body_classes) }}>
     <!-- Site wrapper -->
@@ -54,6 +54,6 @@
       {{ page }}
       {{ page_bottom }}
     </div><!-- ./wrapper -->
-    {{ scripts_bottom }}
+    <js-bottom-placeholder token="{{ placeholder_token|raw }}">
   </body>
 </html>
