--- a/templates/navigation/breadcrumb.html.twig
+++ b/templates/navigation/breadcrumb.html.twig
@@ -8,20 +8,26 @@
  */
 #}
 {% if breadcrumb %}
+<ol class="breadcrumb">
   {% set i = 0 %}
   {% for item in breadcrumb %}
-    <li>
+
       {% if item.url %}
+      <li>
         <a href="{{ item.url }}">
           {% if i == 0 %}
             <i class="fa fa-home"></i>
           {% endif %}
           {{ item.text }}
         </a>
+      <li>
       {% else %}
-        {{ item.text }}
+        <li class="active">{{ item.text }}</li>
       {% endif %}
       {% set i = i + 1 %}
-    </li>
   {% endfor %}
+  {% if title and not is_front %}
+    <li class="active">{{ title }}</li>
+  {% endif %}
+</ol>
 {% endif %}
