--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -87,20 +87,20 @@
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="{{ base_path }}/user/{{ user.uid }}/edit" class="btn btn-default btn-flat">My Account</a>
+                  <a href="{{ base_path }}user/{{ user.uid }}/edit" class="btn btn-default btn-flat">My Account</a>
                 </div>
                 <div class="pull-right">
-                  <a href="{{ base_path }}/user/logout" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="{{ base_path }}user/logout" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
           </li>
           {% else %}
-            <li><a href="{{ base_path }}/user/{{ user.uid }}/edit">My Account</a></li>
-            <li><a href="{{ base_path }}/user/logout">Sign out</a></li>
+            <li><a href="{{ base_path }}user/{{ user.uid }}/edit">My Account</a></li>
+            <li><a href="{{ base_path }}user/logout">Sign out</a></li>
           {% endif %}
         {% else %}
-          <li><a href="{{ base_path }}/user/login">Log in</a></li>
+          <li><a href="{{ base_path }}user/login">Log in</a></li>
         {% endif %}
       </ul>
     </div>
