latest from westminster-drops-8

--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,13 @@
 .login-page-header.logo .logo-mini {
   display: none;
 }
+
+body .label {
+  color: #333;
+  font-size: 80%;
+}
+
+a.tabledrag-handle .handle {
+  width: 24px;
+  height: 24px;
+}
