--- a/templates/dataset/table.html.twig
+++ b/templates/dataset/table.html.twig
@@ -44,6 +44,7 @@ set classes = [
   'table',
   'table-bordered',
   'table-striped',
+  'table-hover',
 ]
 %}
 <table{{ attributes.addClass(classes) }}>
