added additional layout options

--- a/templates/dataset/table.html.twig
+++ b/templates/dataset/table.html.twig
@@ -45,6 +45,7 @@ set classes = [
   'table-bordered',
   'table-striped',
   'table-hover',
+  'responsive'
 ]
 %}
 <table{{ attributes.addClass(classes) }}>
