--- a/templates/layout/yorkshire-1col.html.twig
+++ b/templates/layout/yorkshire-1col.html.twig
@@ -1,14 +1,16 @@
 {#
 /**
  * @file
- * Template for a example 1 column layout.
+ * Template for a 1 column layout.
  */
 #}
-<div class="layout-example-1col clearfix">
-  <div class="region-top">
+<div class="row">
+  <div class="col-xs-12">
     {{ content.top }}
   </div>
-  <div class="region-bottom">
+</div>
+<div class="row">
+  <div class="col-xs-12">
     {{ content.bottom }}
   </div>
 </div>
