--- a/templates/views/views-view-table.html.twig
+++ b/templates/views/views-view-table.html.twig
@@ -39,7 +39,8 @@
     sticky ? 'sticky-enabled',
     'table',
     'table-bordered',
-    'table-striped'
+    'table-striped',
+    'responsive'
   ]
 %}
 <table{{ attributes.addClass(classes) }}>
