--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,9 @@ a.tabledrag-handle .handle {
 .box > .box-header > h4{
   margin:0;
 }
+
+@media (max-width: 991px){
+  .content-header > h1{
+    margin-top:20px;
+  }
+}
